# gpredict

./: .gitignore  .indent.pro  .travis.yml  42017.trsp  42725.trsp  AUTHORS  CODEOWNERS  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure.ac  contributing.md  git-version-gen
data/: .gitignore  20439.trsp  20442.trsp  22825.trsp  23439.trsp  24278.trsp  25397.trsp  25544.trsp  26352.trsp  26536.trsp  26931.trsp  27453.trsp  27607.trsp  28375.trsp  28650.trsp  32785.trsp  32787.trsp  32791.trsp  33499.trsp  7530.trsp  Amateur.mod  Makefile.am  amateur.tle  cubesat.tle  galileo.tle  geo.tle  gps-ops.tle  iridium.tle  military.tle  radar.tle  sample.qth  science.tle  update-tle.sh  weather.tle
data/desktop/: Makefile.am  gpredict.desktop.in
data/metainfo/: Makefile.am  dk.oz9aec.Gpredict.metainfo.xml
data/satdata/: 00424.sat  00694.sat  00733.sat  00877.sat  00900.sat  00902.sat  01293.sat  01361.sat  01512.sat  02608.sat  02802.sat  02807.sat  02826.sat  02874.sat  02965.sat  03029.sat  03133.sat  03230.sat  03597.sat  03669.sat  03835.sat  04321.sat  04327.sat  04507.sat  04793.sat  04814.sat  05118.sat  05398.sat  05560.sat  05730.sat  06073.sat  06153.sat  06155.sat  06212.sat  06235.sat  06236.sat  06909.sat  06920.sat  07004.sat  07338.sat  (+1222 more)
data/satdata/scripts/: add-amsat.py  convert-celestrak.py  convert.py  update.py
data/trsp/: 14781.trsp  22826.trsp  25338.trsp  25509.trsp  26536.trsp  27453.trsp  27607.trsp  27844.trsp  27848.trsp  27939.trsp  28375.trsp  28654.trsp  28895.trsp  29655.trsp  32785.trsp  32788.trsp  32789.trsp  32791.trsp  32953.trsp  33493.trsp  33498.trsp  35865.trsp  35870.trsp  35932.trsp  35933.trsp  35934.trsp  35935.trsp  36122.trsp  36799.trsp  37224.trsp  37227.trsp  37772.trsp  37839.trsp  37841.trsp  37853.trsp  37854.trsp  37855.trsp  38340.trsp  38760.trsp  38853.trsp  (+65 more)
goocanv8/demo/: Makefile.am  Makefile.in  demo-animation.c  demo-arrowhead.c  demo-clipping.c  demo-events.c  demo-features.c  demo-fifteen.c  demo-focus.c  demo-grabs.c  demo-item.c  demo-item.h  demo-paths.c  demo-scalability.c  demo-table.c  demo.c  mv-demo-animation.c  mv-demo-arrowhead.c  mv-demo-clipping.c  mv-demo-events.c  mv-demo-features.c  mv-demo-fifteen.c  mv-demo-focus.c  mv-demo-grabs.c  mv-demo-paths.c  mv-demo-scalability.c  mv-demo-table.c  mv-demo.c  mv-scalability-demo.c  mv-simple-demo.c  scalability-demo.c  simple-demo.c  units-demo.c  widgets-demo.c
goocanv8/docs/: Makefile.am  Makefile.in  creating-items.xml  goocanvas-docs.sgml  goocanvas-sections.txt  goocanvas.types  model-view-canvas.xml  overview.xml  simple-canvas.xml
goocanv8/docs/html/: GooCanvas.html  GooCanvasEllipse.html  GooCanvasEllipseModel.html  GooCanvasGroup.html  GooCanvasGroupModel.html  GooCanvasImage.html  GooCanvasImageModel.html  GooCanvasItemModelSimple.html  GooCanvasItemSimple.html  GooCanvasPath.html  GooCanvasPathModel.html  GooCanvasPolyline.html  GooCanvasPolylineModel.html  GooCanvasRect.html  GooCanvasRectModel.html  GooCanvasStyle.html  GooCanvasTable.html  GooCanvasTableModel.html  GooCanvasText.html  GooCanvasTextModel.html  GooCanvasWidget.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  goocanvas-GooCanvas-Types.html  goocanvas-creating-items.html  goocanvas-goocanvasitem.html  goocanvas-goocanvasitemmodel.html  goocanvas-model-view-canvas.html  goocanvas-overview.html  goocanvas-simple-canvas.html  goocanvas.devhelp  goocanvas.devhelp2  index.html  index.sgml  style.css
goocanv8/docs/tmpl/: goocanvas.sgml  goocanvasellipse.sgml  goocanvasellipsemodel.sgml  goocanvasgroup.sgml  goocanvasgroupmodel.sgml  goocanvasimage.sgml  goocanvasimagemodel.sgml  goocanvasitem.sgml  goocanvasitemmodel.sgml  goocanvasitemmodelsimple.sgml  goocanvasitemsimple.sgml  goocanvaspath.sgml  goocanvaspathmodel.sgml  goocanvaspolyline.sgml  goocanvaspolylinemodel.sgml  goocanvasrect.sgml  goocanvasrectmodel.sgml  goocanvasstyle.sgml  goocanvastable.sgml  goocanvastablemodel.sgml  goocanvastext.sgml  goocanvastextmodel.sgml  goocanvasutils.sgml  goocanvaswidget.sgml
goocanv8/docs/xml/: creating-items.xml  goocanvas.xml  goocanvasellipse.xml  goocanvasellipsemodel.xml  goocanvasgroup.xml  goocanvasgroupmodel.xml  goocanvasimage.xml  goocanvasimagemodel.xml  goocanvasitem.xml  goocanvasitemmodel.xml  goocanvasitemmodelsimple.xml  goocanvasitemsimple.xml  goocanvaspath.xml  (+14 more)
goocanv8/src/: Makefile.am  Makefile.in  goocanvas.c  goocanvas.h  goocanvasatk.c  goocanvasatk.h  goocanvasellipse.c  goocanvasellipse.h  goocanvasenumtypes.c  goocanvasenumtypes.h  goocanvasgroup.c  goocanvasgroup.h  goocanvasimage.c  goocanvasimage.h  goocanvasitem.c  goocanvasitem.h  goocanvasitemmodel.c  goocanvasitemmodel.h  goocanvasitemsimple.c  goocanvasitemsimple.h  goocanvasmarshal.c  goocanvasmarshal.h  goocanvasmarshal.list  goocanvaspath.c  goocanvaspath.h  goocanvaspolyline.c  goocanvaspolyline.h  goocanvasprivate.h  goocanvasrect.c  goocanvasrect.h  goocanvasstyle.c  goocanvasstyle.h  goocanvastable.c  goocanvastable.h  goocanvastext.c  goocanvastext.h  goocanvasutils.c  goocanvasutils.h  goocanvaswidget.c  goocanvaswidget.h
pixmaps/icons/: Makefile.am
pixmaps/logos/: Makefile.am
pixmaps/maps/: Makefile.am
po/: cs.po  (+17 more)
src/: .gitignore  .svnignore  Makefile.am  about.c  about.h  compat.c  compat.h  config-keys.h  defaults.h  first-time.c  first-time.h  frq-update.c  frq-update.c_org  frq-update.h  gpredict-help.c  gpredict-help.h  gpredict-url-hook.c  gpredict-url-hook.h  gpredict-utils.c  gpredict-utils.h  gtk-audio.c  gtk-audio.h  gtk-azel-plot.c  gtk-azel-plot.h  gtk-event-list-popup.c  gtk-event-list-popup.h  gtk-event-list.c  gtk-event-list.h  gtk-freq-ctrl.c  gtk-freq-ctrl.h  gtk-freq-knob.c  gtk-freq-knob.h  gtk-met.c  gtk-met.h  gtk-polar-plot.c  gtk-polar-plot.h  gtk-polar-view-popup.c  gtk-polar-view-popup.h  gtk-polar-view.c  gtk-polar-view.h  (+169 more)
src/nxjson/: nxjson.c  nxjson.h
src/sgpsdp/: 2_README  Makefile.am  sgp4sdp4.c  sgp4sdp4.h  sgp_in.c  sgp_math.c  sgp_obs.c  sgp_time.c  solar.c  test-001.c  test-001.tle  test-002.c  test-002.tle
(+51 files in other folders)
