
gpredict_datdir = $(pkgdatadir)/data

gpredict_dat_DATA = \
    locations.dat sample.qth Amateur.mod \
    amateur.tle cubesat.tle galileo.tle geo.tle \
    gps-ops.tle iridium.tle military.tle \
    radar.tle science.tle weather.tle \
    7530.trsp 22825.trsp 24278.trsp 25544.trsp \
    27607.trsp 27848.trsp 28375.trsp 28650.trsp

EXTRA_DIST = $(gpredict_dat_DATA)

