
gpredict_datdir = $(pkgdatadir)/data

gpredict_dat_DATA = \
    locations.dat sample.qth Amateur.mod \
    amateur.tle cubesat.tle galileo.tle geo.tle \
    gps-ops.tle iridium.tle military.tle \
    radar.tle science.tle weather.tle \
    7530.trsp 22825.trsp 24278.trsp 25544.trsp \
    27607.trsp 27848.trsp 28375.trsp 28650.trsp \
    32785.trsp \
    24786.trsp 25338.trsp 26352.trsp 26536.trsp \
    26871.trsp 27453.trsp 28654.trsp \
    20439.trsp 20442.trsp 22826.trsp 23439.trsp \
    25397.trsp 26931.trsp 27844.trsp 27939.trsp \
    28895.trsp 32787.trsp 32789.trsp 32791.trsp \
    33493.trsp 33498.trsp 33499.trsp

EXTRA_DIST = $(gpredict_dat_DATA)

