## Process this file with automake to produce Makefile.in

INCLUDES = \
	-DG_DISABLE_DEPRECATED -DPANGO_DISABLE_DEPRECATED \
	-DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED \
	-DGTK_DISABLE_DEPRECATED \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DG_LOG_DOMAIN=\"GooCanvas\" \
	@PACKAGE_CFLAGS@

## lib_LTLIBRARIES = libgoocanvas.la
noinst_LTLIBRARIES = libgoocanvas.la

libgoocanvas_la_LIBADD = @PACKAGE_LIBS@ $(INTLLIBS)

if PLATFORM_WIN32
no_undefined = -no-undefined
endif

libtool_opts =				\
  -version-info $(LT_VERSION_INFO)	\
  -export-dynamic $(no_undefined)	\
  -rpath $(libdir)

libgoocanvas_la_LDFLAGS = $(libtool_opts) 

libgoocanvasincludedir = ./goocanvas-1.0
## libgoocanvasincludedir = ./
## libgoocanvas_noinstdir = ./

libgoocanvas_public_headers = \
	goocanvasellipse.h		\
	goocanvasgroup.h		\
	goocanvasimage.h		\
	goocanvasitem.h			\
	goocanvasitemmodel.h		\
	goocanvasitemsimple.h		\
	goocanvaspolyline.h		\
	goocanvaspath.h			\
	goocanvasrect.h			\
	goocanvasstyle.h		\
	goocanvastable.h		\
	goocanvastext.h			\
	goocanvasutils.h		\
	goocanvaswidget.h		\
	goocanvas.h

libgoocanvas_la_SOURCES =		\
	goocanvasatk.h			\
	goocanvasatk.c			\
	goocanvasellipse.c		\
	goocanvasenumtypes.c		\
	goocanvasgroup.c		\
	goocanvasimage.c		\
	goocanvasitem.c			\
	goocanvasitemmodel.c		\
	goocanvasitemsimple.c		\
	goocanvasmarshal.c		\
	goocanvaspolyline.c		\
	goocanvaspath.c			\
	goocanvasprivate.h		\
	goocanvasrect.c			\
	goocanvasstyle.c		\
	goocanvastable.c		\
	goocanvastext.c			\
	goocanvasutils.c		\
	goocanvaswidget.c		\
	goocanvas.c 


libgoocanvas_extra_sources =		\
	goocanvasmarshal.list

libgoocanvas_built_headers =		\
	goocanvasenumtypes.h		\
	goocanvasmarshal.h

libgoocanvas_built_sources =		\
	goocanvasenumtypes.c		\
	goocanvasmarshal.c

stamp_files =				\
	stamp-goocanvasmarshal.h	\
	stamp-goocanvasenumtypes.h


libgoocanvasinclude_HEADERS =		\
	$(libgoocanvas_public_headers)	\
	$(libgoocanvas_built_headers)


#
# Most of the stuff below has been pinched from the GTK+ Makefile.am, as
# it is tricky to get right and we know it works for GTK+.
#

# all autogenerated files need to be generated in the srcdir,
# so old versions get remade and are not confused with newer
# versions in the build dir. thus a development setup requires
# srcdir to be writable, passing --disable-rebuilds to
# ../configure will supress all autogeneration rules.
goocanvasmarshal.h: stamp-goocanvasmarshal.h
	@true
stamp-goocanvasmarshal.h: @REBUILD@ goocanvasmarshal.list
	$(GLIB_GENMARSHAL) --prefix=goo_canvas_marshal $(srcdir)/goocanvasmarshal.list --header >> xgen-gmlh \
	&& (cmp -s xgen-gmlh goocanvasmarshal.h || cp xgen-gmlh goocanvasmarshal.h) \
	&& rm -f xgen-gmlh \
	&& echo timestamp > $(@F)	
goocanvasmarshal.c: @REBUILD@ goocanvasmarshal.list
	(echo "#include \"goocanvasmarshal.h\""; \
	 $(GLIB_GENMARSHAL) --prefix=goo_canvas_marshal $(srcdir)/goocanvasmarshal.list --body) >> xgen-gmlc \
	&& cp xgen-gmlc goocanvasmarshal.c \
	&& rm -f xgen-gmlc


goocanvasenumtypes.h: stamp-goocanvasenumtypes.h	
	@true
stamp-goocanvasenumtypes.h: @REBUILD@ $(goo_canvas_public_headers) Makefile
	(cd $(srcdir) && $(GLIB_MKENUMS) \
		--fhead "#ifndef __GOO_CANVAS_ENUM_TYPES_H__\n#define __GOO_CANVAS_ENUM_TYPES_H__\n\n#include <glib-object.h>\n\nG_BEGIN_DECLS\n" \
		--fprod "/* Enumerations from \"@filename@\" */\n" \
		--vhead "GType @enum_name@_get_type (void);\n#define GOO_TYPE_@ENUMSHORT@ (@enum_name@_get_type())\n\n\n" \
		--ftail "G_END_DECLS\n\n#endif /* __GOO_CANVAS_ENUM_TYPES_H__ */" \
		$(libgoocanvas_public_headers)) >> xgen-gtbh \
	&& (cmp -s xgen-gtbh goocanvasenumtypes.h || cp xgen-gtbh goocanvasenumtypes.h ) \
	&& rm -f xgen-gtbh \
	&& echo timestamp > $(@F)

goocanvasenumtypes.c: @REBUILD@ $(goo_canvas_public_headers) Makefile
	(cd $(srcdir) && $(GLIB_MKENUMS) \
		--fhead "#include <goocanvas.h>\n" \
		--fhead "#include <glib-object.h>\n" \
		--fprod "\n/* Enumerations from \"@filename@\" */" \
		--vhead "GType\n@enum_name@_get_type (void)\n{\n  static GType etype = 0;\n if( etype == 0 ) \n  {\n    static const G@Type@Value values[] = {" \
		--vprod "      { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
		--vtail "      { 0, NULL, NULL }\n    };\n    etype = g_@type@_register_static (\"@EnumName@\", values );\n  }\n  return etype;\n}\n" \
		$(libgoocanvas_public_headers)) > xgen-gtbc \
	&& cp xgen-gtbc goocanvasenumtypes.c  \
	&& rm -f xgen-gtbc



gen_sources = xgen-gdef xgen-gtbh xgen-gtic xgen-gmh xgen-gmc xgen-gmlh xgen-gmlc
CLEANFILES = $(gen_sources)
BUILT_SOURCES = $(libgoocanvas_built_headers) $(libgoocanvas_built_sources)
MAINTAINERCLEANFILES = $(BUILT_SOURCES) $(stamp_files)
EXTRA_DIST = $(BUILT_SOURCES) $(libgoocanvas_extra_sources)
