gpredict_iconsdir = $(datadir)/pixmaps/gpredict/icons

gpredict_icons2dir = $(datadir)/pixmaps/
gpredict_icons2_DATA = gpredict-icon.png

gpredict_icons_DATA = \
	gpredict-antenna.png \
	gpredict-antenna-small.png \
	gpredict-azel-small.png \
	gpredict-calendar.png \
	gpredict-clock.png \
	gpredict-clock-small.png \
	gpredict-crash.png \
	gpredict-icon.png \
        gpredict-layout-00.png \
        gpredict-layout-01.png \
        gpredict-layout-02.png \
        gpredict-layout-03.png \
        gpredict-layout-04.png \
        gpredict-layout-05.png \
        gpredict-layout-06.png \
        gpredict-layout-07.png \
        gpredict-layout-08.png \
        gpredict-layout-99.png \
	gpredict-leds.png \
	gpredict-mod-attach.png \
	gpredict-mod-close.png \
	gpredict-mod-config.png \
	gpredict-mod-detach.png \
	gpredict-mod-popup.png \
	gpredict-notebook.png \
	gpredict-oscilloscope.png \
	gpredict-oscilloscope-small.png \
	gpredict-planner.png \
	gpredict-planner-small.png \
	gpredict-polar-small.png \
	gpredict-sat-list.png \
	gpredict-sat-pref.png \
	gpredict-shuttle.png \
	gpredict-shuttle-small.png

EXTRA_DIST = $(gpredict_icons_DATA) $(gpredict_icons2_DATA)

