gpredict_logosdir = $(datadir)/pixmaps/gpredict/logos

gpredict_logos_DATA = \
    gpredict_horizontal_color.png \
    gpredict_horizontal_color.svg \
    gpredict_horizontal_white.png \
    gpredict_horizontal_white.svg \
    gpredict_icon_color.png \
    gpredict_icon_color.svg \
    gpredict_icon_white.png \
    gpredict_icon_white.svg \
    gpredict_vertical_color.png \
    gpredict_vertical_color.svg \
    gpredict_vertical_white.png \
    gpredict_vertical_white.svg

EXTRA_DIST = $(gpredict_logos_DATA)
