
gpredict_mapsdir = $(datadir)/pixmaps/gpredict/maps

gpredict_maps_DATA = \
    earth_800.png \
    nasa-bmng-01_1024.jpg \
    nasa-bmng-03_1024.jpg \
    nasa-bmng-05_1024.jpg \
    nasa-bmng-07_1024.jpg \
    nasa-bmng-08_1024.jpg \
    nasa-bmng-01_2048.jpg \
    nasa-bmng-03_2048.jpg \
    nasa-bmng-05_2048.jpg \
    nasa-bmng-07_2048.jpg \
    nasa-bmng-08_2048.jpg \
    nasa-topo_800.png \
    nasa-topo_1024.jpg \
    nasa-topo_1600.jpg \
    nasa-topo_2048.jpg

EXTRA_DIST = $(gpredict_maps_DATA)

